--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
 name = "roulette"
-version = "0.1.0"
-authors = ["Nathan Stoddard <nstodda@purdue.edu>"]
+version = "0.2.0"
+authors = ["Nathan Stoddard"]
 description = "An efficient implementation of roulette wheel selection"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/nstoddard/roulette"
-# TODO: keywords?
 
 [lib]
 name = "roulette"
 doc = true
 
 [dependencies]
-rand = "*"
+rand = "0.5"
